--- a/cfg.ini
+++ b/cfg.ini
@@ -4,8 +4,9 @@ batch_size = 32
 learning_rate = 0.0002
 learning_rate_decay = 0.99
 epoch = 100
-a = 0.1
-b = 1
-c = 0
-d = 0
+alpha = 0.0004
+beta = 0
+gamma = 0.07142857
+theta = 0.1
+switch = 10
 
