--- a/cfg.ini
+++ b/cfg.ini
@@ -1,7 +1,7 @@
 [parameter]
 batch_index_max = 348
 batch_size = 32
-learning_rate = 0.0002
+learning_rate = 0.0000001
 learning_rate_decay = 0.99
 epoch = 100
 alpha = 0.0004
