--- a/Skill-MTCNN/config.ini
+++ b/Skill-MTCNN/config.ini
@@ -1,11 +1,17 @@
-[parameter]
+[Skill-MTCNN]
 batch_index_max = 65
 batch_size = 32
 learning_rate = 0.0001
 learning_rate_decay = 0.99
-epoch = 23
+epoch = 40
 alpha = 0.0004
-beta = 0.004
 gamma = 0.0007142857
 theta = 0.001
+
+[Cor_Matrix]
+batch_index_max = 65
+batch_size = 32
+learning_rate = 0.001
+learning_rate_decay = 0.99
+epoch = 40
 
