扩大测试集规模，利用pickle减少内存占用

--- a/Skill-MTCNN/config.ini
+++ b/Skill-MTCNN/config.ini
@@ -15,3 +15,8 @@ learning_rate = 0.001
 learning_rate_decay = 0.99
 epoch = 40
 
+[TestBatch]
+batch_index_max = 87
+batch_size = 32
+total = 2816
+
