扩大Th数据集，pickle减少内存占用

--- a/Skill-MTCNN/config.ini
+++ b/Skill-MTCNN/config.ini
@@ -1,6 +1,4 @@
 [Skill-MTCNN]
-batch_index_max = 65
-batch_size = 32
 learning_rate = 0.0001
 learning_rate_decay = 0.99
 epoch = 40
@@ -15,8 +13,16 @@ learning_rate = 0.001
 learning_rate_decay = 0.99
 epoch = 40
 
+[TrainBatch]
+batch_index_max = 65
+batch_size = 32
+
 [TestBatch]
 batch_index_max = 87
 batch_size = 32
 total = 2816
+
+[ThBatch]
+batch_index_max = 32
+batch_size = 32
 
